--- a/.docker/web/nginx.conf
+++ b/.docker/web/nginx.conf
@@ -111,6 +111,7 @@ http {
         }
 
         location ~ ^/(?:index|remote|public|cron|core/ajax/update|status|ocs/v[12]|updater/.+|ocs-provider/.+)\.php(?:$|/) {
+            fastcgi_read_timeout        3600;
             fastcgi_split_path_info ^(.+\.php)(/.*)$;
             include fastcgi_params;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
