--- a/.docker/web/nginx.conf
+++ b/.docker/web/nginx.conf
@@ -85,7 +85,7 @@ http {
         }
 
         # set max upload size
-        client_max_body_size 10G;
+        client_max_body_size 512M;
         fastcgi_buffers 64 4K;
 
         # Enable gzip but do not remove ETag headers
