--- a/local/Makefile
+++ b/local/Makefile
@@ -1,6 +1,6 @@
 all: init-all
 
-init-all: init-db init-proxy init-app set-configs install-apps init-cron
+init-all: init-db init-proxy init-app set-locale set-config init-cron
 
 init-db:
 	docker-compose up -d db
@@ -13,18 +13,14 @@ init-app:
 	docker-compose up -d web app
 	until docker-compose exec --user www-data app php occ status --output=json | grep -e "{\"installed\":true,"; do echo "Awaiting for NextCloud installation"; sleep 10; done
 
-install-apps:
-	docker-compose exec --user www-data app php occ app:install deck
-	docker-compose exec --user www-data app php occ app:install calendar
-	docker-compose exec --user www-data app php occ app:install contacts
+LANG=pt_BR
+set-locale:
+	docker-compose exec --user www-data app php occ config:system:set default_locale --value ${LANG} 
+	docker-compose exec --user www-data app php occ config:system:set default_language --value ${LANG} 
+	docker-compose exec --user www-data app sh -c "php occ user:setting \$$NEXTCLOUD_ADMIN_USER core lang ${LANG}"
 
-set-configs: 
-	docker-compose exec --user www-data app php occ config:system:set default_locale --value pt_BR 
-	docker-compose exec --user www-data app php occ config:system:set default_language --value pt_BR 
+set-config:
 	docker-compose exec --user www-data app php occ config:system:set skeletondirectory --value  ""
-	docker-compose exec --user www-data app sh -c "php occ user:setting \$$NEXTCLOUD_ADMIN_USER core lang pt_BR"
 
 init-cron: 
 	docker-compose up -d cron
-
-
