--- a/.env
+++ b/.env
@@ -1,3 +1,20 @@
-POSTGRES_PASSWORD=SECRET_PASSWORD
-POSTGRES_DB=nextcloud
+POSTGRES_DATABASE=nextcloud
 POSTGRES_USER=nextcloud
+POSTGRES_PASSWORD=
+POSTGRES_HOST=postgres
+
+NEXTCLOUD_ADMIN_USER=
+NEXTCLOUD_ADMIN_PASSWORD=
+
+REDIS_HOST=redis
+
+NEXTCLOUD_TRUSTED_DOMAINS=
+
+SMTP_HOST=
+SMTP_SECURE=
+SMTP_PORT=
+SMTP_AUTHTYPE=
+SMTP_NAME=
+SMTP_PASSWORD=
+MAIL_FROM_ADDRESS=
+MAIL_DOMAIN=
