--- a/.docker/web/nginx.conf
+++ b/.docker/web/nginx.conf
@@ -37,6 +37,7 @@ http {
 
     server {
         listen 80;
+        include /etc/nginx/conf.d/includes/*.conf;
 
         # Add headers to serve security related headers
         # Before enabling Strict-Transport-Security headers please read into this
