--- a/docker-compose.fpm.yml
+++ b/docker-compose.fpm.yml
@@ -50,6 +50,7 @@ services:
     restart: always
     volumes:
       - ./volumes/nextcloud:/var/www/html:ro
+      - ./volumes/nginx/includes:/etc/nginx/conf.d/includes/
     environment:
       - VIRTUAL_HOST
       - LETSENCRYPT_HOST
