--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,16 @@ services:
       - db
     volumes:
       - ./volumes/nextcloud:/var/www/html
+    environment:
+      - POSTGRES_DB=db
+      - POSTGRES_HOST=${POSTGRES_HOST:-db}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-SECRET_PASSWORD}
+      - POSTGRES_USER=${POSTGRES_USER:-nextcloud}
+      - NEXTCLOUD_ADMIN_USER=${NEXTCLOUD_ADMIN_USER:-admin}
+      - NEXTCLOUD_ADMIN_PASSWORD=${NEXTCLOUD_ADMIN_PASSWORD:-admin}
+      - NEXTCLOUD_TRUSTED_DOMAINS=${NEXTCLOUD_TRUSTED_DOMAINS:-mydomain.coop}    
+    env_file:
+      - .env  
     restart: always
     networks:
       - internal
