--- a/.docker/web/nginx.conf
+++ b/.docker/web/nginx.conf
@@ -45,7 +45,7 @@ http {
         # add_header Strict-Transport-Security "max-age=15768000; includeSubDomains; preload;" always;
 
         # set max upload size
-        client_max_body_size 512M;
+        client_max_body_size 20G;
         fastcgi_buffers 64 4K;
 
         # Enable gzip but do not remove ETag headers
