Altera definição das variáveis de ambiente
Signed-off-by: mateusrovedaa <mateus@roveeb.com>

--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,8 @@ SMTP_NAME=
 SMTP_PASSWORD=
 MAIL_FROM_ADDRESS=
 MAIL_DOMAIN=
+
+NGINX_PROXY_CONTAINER=nginx-proxy
+
+VIRTUAL_HOST_ONLYOFFICE=
+LETSENCRYPT_HOST_ONLYOFFICE
