--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,11 @@ services:
     restart: always
     volumes:
       - ./volumes/postgres/data:/var/lib/postgresql/data
-    env_file:
-      - .env
+    environment:
+      - POSTGRES_DB
+      - POSTGRES_USER
+      - POSTGRES_PASSWORD
+      - POSTGRES_HOST
     networks:
       - internal
 
@@ -25,6 +28,24 @@ services:
     volumes:
       - ./volumes/nextcloud:/var/www/html
     restart: always
+    environment:
+      - TZ
+      - POSTGRES_DB
+      - POSTGRES_USER
+      - POSTGRES_PASSWORD
+      - POSTGRES_HOST
+      - NEXTCLOUD_ADMIN_USER
+      - NEXTCLOUD_ADMIN_PASSWORD
+      - REDIS_HOST
+      - NEXTCLOUD_TRUSTED_DOMAINS
+      - SMTP_HOST
+      - SMTP_SECURE
+      - SMTP_PORT
+      - SMTP_AUTHTYPE
+      - SMTP_NAME
+      - SMTP_PASSWORD
+      - MAIL_FROM_ADDRESS
+      - MAIL_DOMAIN
     networks:
       - internal
 
@@ -36,9 +57,9 @@ services:
       - ./volumes/nextcloud:/var/www/html:ro
       - ./volumes/nginx/includes:/etc/nginx/conf.d/includes:rw
     environment:
-      - VIRTUAL_HOST=mydomain.coop
-      - LETSENCRYPT_HOST=mydomain.coop
-      #- LETSENCRYPT_EMAIL=user@mydomain.coop
+      - VIRTUAL_HOST
+      - LETSENCRYPT_HOST
+      - LETSENCRYPT_EMAIL
     depends_on:
       - app
     networks:
@@ -58,8 +79,8 @@ services:
   #  image: onlyoffice/documentserver
   #  restart: always
   #  environment:
-  #    - VIRTUAL_HOST=onlyoffice.mydomain.coop
-  #    - LETSENCRYPT_HOST=onlyoffice.mydomain.coop
+  #    - VIRTUAL_HOST=${VIRTUAL_HOST_ONLYOFFICE}
+  #    - LETSENCRYPT_HOST=${LETSENCRYPT_HOST_ONLYOFFICE}
   #  volumes:
   #    - ./volumes/onlyoffice/DocumentServer/logs:/var/log/onlyoffice
   #    - ./volumes/onlyoffice/DocumentServer/data:/var/www/onlyoffice/Data
