--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ TZ=
 POSTGRES_DB=nextcloud
 POSTGRES_USER=nextcloud
 POSTGRES_PASSWORD=
-POSTGRES_HOST=postgres
+POSTGRES_HOST=db
 
 NEXTCLOUD_ADMIN_USER=
 NEXTCLOUD_ADMIN_PASSWORD=
@@ -29,4 +29,4 @@ MAIL_DOMAIN=
 NGINX_PROXY_CONTAINER=nginx-proxy
 
 VIRTUAL_HOST_ONLYOFFICE=
-LETSENCRYPT_HOST_ONLYOFFICE
+LETSENCRYPT_HOST_ONLYOFFICE=
