--- a/docker-compose.proxy.yml
+++ b/docker-compose.proxy.yml
@@ -23,6 +23,8 @@ services:
       - ./certs:/etc/nginx/certs:ro
     networks:
       - reverse-proxy
+    labels:
+      - "com.github.jrcs.letsencrypt_nginx_proxy_companion.nginx_proxy"
 
   nginx-letsencrypt:
     container_name: nginx-letsencrypt
