Update to nextcloud 27
Signed-off-by: Vitor Mattos <vitor@php.rio>

--- a/.docker/web/nginx.conf
+++ b/.docker/web/nginx.conf
@@ -42,7 +42,7 @@ http {
         # Add headers to serve security related headers
         # Before enabling Strict-Transport-Security headers please read into this
         # topic first.
-        # add_header Strict-Transport-Security "max-age=15768000; includeSubDomains; preload;" always;
+        add_header Strict-Transport-Security "max-age=15552000; includeSubDomains; preload;" always;
 
         # set max upload size
         client_max_body_size 20G;
@@ -87,10 +87,11 @@ http {
         location ^~ /.well-known {
             # The following 6 rules are borrowed from `.htaccess`
 
-            location = /.well-known/carddav     { return 301 /remote.php/dav/; }
-            location = /.well-known/caldav      { return 301 /remote.php/dav/; }
+            location = /.well-known/carddav     { return 301 https://$host/remote.php/dav/; }
+            location = /.well-known/caldav      { return 301 https://$host/remote.php/dav/; }
+
             # Anything else is dynamically handled by Nextcloud
-            location ^~ /.well-known            { return 301 /index.php$uri; }
+            location ^~ /.well-known            { return 301 https://$host/index.php$uri; }
 
             try_files $uri $uri/ =404;
         }
@@ -110,7 +111,7 @@ http {
             deny all;
         }
 
-        location ~ ^\/(?:index|remote|public|cron|core\/ajax\/update|status|ocs\/v[12]|updater\/.+|oc[ms]-provider\/.+)\.php(?:$|\/) {
+        location ~ ^\/(?:index|remote|public|cron|core\/ajax\/update|status|ocs\/v[12]|updater\/.+|oc[ms]-provider\/.*)\.php(?:$|\/) {
             fastcgi_split_path_info ^(.+?\.php)(\/.*|)$;
             fastcgi_read_timeout        3600;
             set $path_info $fastcgi_path_info;
