Make compatible with Nextcloud 28
Signed-off-by: Vitor Mattos <vitor@php.rio>

--- a/.docker/app/Dockerfile
+++ b/.docker/app/Dockerfile
@@ -1,5 +1,8 @@
 FROM nextcloud:stable-fpm
 
-RUN apt-get update
+ADD https://github.com/mlocati/docker-php-extension-installer/releases/latest/download/install-php-extensions /usr/local/bin/
+RUN chmod uga+x /usr/local/bin/install-php-extensions && sync \
+    && install-php-extensions \
+    bz2
 
 COPY config/php.ini /usr/local/etc/php/conf.d/
