--- a/.docker/web/nginx.conf
+++ b/.docker/web/nginx.conf
@@ -96,7 +96,7 @@ http {
         # only for Nextcloud like below:
         include mime.types;
         types {
-            text/javascript mjs;
+            text/javascript js mjs;
         }
 
         # Specify how to handle directories -- specifying `/index.php$request_uri`
