--- a/.docker/app/config/php.ini
+++ b/.docker/app/config/php.ini
@@ -1,3 +1,4 @@
 post_max_size=20G
 upload_max_filesize=20G
-opcache.interned_strings_buffer=16
+opcache.interned_strings_buffer=64
+opcache.memory_consumption=256
