--- a/.docker/nginx-proxy/conf.d/timeout.conf
+++ b/.docker/nginx-proxy/conf.d/timeout.conf
@@ -2,3 +2,4 @@ proxy_connect_timeout       3600;
 proxy_send_timeout          3600;
 proxy_read_timeout          3600;
 send_timeout                3600;
+proxy_max_temp_file_size    4096m;
