chore: add documentation
Signed-off-by: Vitor Mattos <vitor@php.rio>

--- a/.docker/nginx-proxy/conf.d/timeout.conf
+++ b/.docker/nginx-proxy/conf.d/timeout.conf
@@ -2,5 +2,11 @@ proxy_connect_timeout       3600;
 proxy_send_timeout          3600;
 proxy_read_timeout          3600;
 send_timeout                3600;
-# ajusta os chunks para o mesmo tamanho que o nextcloud utiliza
+
+# Value slightly larger than required for Nextcloud.
+# 1024Mb * 15, the necessary is 1024Mb * 10
+# Ref:
+#    https://docs.nextcloud.com/server/latest/admin_manual/configuration_files/big_file_upload_configuration.html#adjust-chunk-size-on-nextcloud-side
+#    https://nginx.org/en/docs/http/ngx_http_proxy_module.html#proxy_max_temp_file_size
+# Default: 1024m
 proxy_max_temp_file_size    15360m;
