chore: new release
- Updated all documentation
- Reorganized docker-compose files

Signed-off-by: Vitor Mattos <vitor@php.rio>

--- a/.docker/app/Dockerfile
+++ b/.docker/app/Dockerfile
@@ -1,4 +1,6 @@
-FROM nextcloud:stable-fpm
+ARG NEXTCLOUD_VERSION=stable-fpm
+
+FROM nextcloud:${NEXTCLOUD_VERSION}
 
 ADD https://github.com/mlocati/docker-php-extension-installer/releases/latest/download/install-php-extensions /usr/local/bin/
 RUN chmod uga+x /usr/local/bin/install-php-extensions && sync \
