--- a/.docker/web/nextcloud.conf
+++ b/.docker/web/nextcloud.conf
@@ -78,8 +78,7 @@ server {
     # only for Nextcloud like below:
     include mime.types;
     types {
-        text/javascript js mjs;
-	application/wasm wasm;
+        text/javascript mjs;
     }
 
     # Specify how to handle directories -- specifying `/index.php$request_uri`
