chore: organize networks
Signed-off-by: Vitor Mattos <vitor@php.rio>

--- a/docker-compose-postgres.yml
+++ b/docker-compose-postgres.yml
@@ -15,3 +15,9 @@ services:
       - POSTGRES_PASSWORD
     networks:
       - postgres
+  app:
+    networks:
+      - postgres
+  cron:
+    networks:
+      - postgres
