chore: use TZ env
Signed-off-by: Vitor Mattos <vitor@php.rio>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,6 +53,8 @@ services:
   cron:
     build: .docker/app
     restart: unless-stopped
+    environment:
+      - TZ
     volumes:
       - ./volumes/nextcloud:/var/www/html
     networks:
