--- a/.docker/web/nextcloud.conf
+++ b/.docker/web/nextcloud.conf
@@ -155,6 +155,7 @@ server {
         fastcgi_request_buffering off;
 
         fastcgi_max_temp_file_size 0;
+        fastcgi_read_timeout 3600;
     }
 
     # Serve static files
