--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,8 @@ VIRTUAL_HOST=
 LETSENCRYPT_HOST=
 LETSENCRYPT_EMAIL=
 
+TRUSTED_PROXIES=
+
 # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 TZ=
 
