--- a/.env.example
+++ b/.env.example
@@ -9,5 +9,31 @@ POSTGRES_PASSWORD=
 
 NEXTCLOUD_ADMIN_USER=
 NEXTCLOUD_ADMIN_PASSWORD=
-
 NEXTCLOUD_TRUSTED_DOMAINS=
+
+
+OVERWRITECLIURL=
+OVERWRITEPROTOCOL=https
+OVERWRITEHOST=
+TRUSTED_PROXIES="172.16.0.0/12 192.168.0.0/16 10.0.0.0/8 fc00::/7 fe80::/10 2001:db8::/32"
+
+
+
+
+
+TZ = ${NEXTCLOUD_TIMEZONE}
+POSTGRES_HOST: postgres-nextcloud
+DB_PORT: 5432
+POSTGRES_DB: ${NEXTCLOUD_DB_NAME}
+POSTGRES_USER: ${NEXTCLOUD_DB_USER}
+POSTGRES_PASSWORD: ${NEXTCLOUD_DB_PASSWORD}
+REDIS_HOST: redis-nextcloud
+REDIS_HOST_PORT: 6379
+REDIS_HOST_PASSWORD: ${NEXTCLOUD_REDIS_PASSWORD}
+NEXTCLOUD_ADMIN_USER: ${NEXTCLOUD_ADMIN_USERNAME}
+NEXTCLOUD_ADMIN_PASSWORD: ${NEXTCLOUD_ADMIN_PASSWORD}
+NEXTCLOUD_TRUSTED_DOMAINS: ${NEXTCLOUD_HOSTNAME}
+OVERWRITECLIURL: ${NEXTCLOUD_URL}
+OVERWRITEPROTOCOL: https
+OVERWRITEHOST: ${NEXTCLOUD_HOSTNAME}
+TRUSTED_PROXIES: 172.16.0.0/12 192.168.0.0/16 10.0.0.0/8 fc00::/7 fe80::/10 2001:db8::/32
