--- a/.github/workflows/publish-ghcr.yml
+++ b/.github/workflows/publish-ghcr.yml
@@ -17,7 +17,7 @@ jobs:
       run: echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
     - name: Build Docker image
-      run: docker build -t ghcr.io/librecodecoop/nextcloud-images:30 .
+      run: docker build -t ghcr.io/librecodecoop/nextcloud-images:30 -f .docker/app/Dockerfile .
 
     - name: Push Docker image
       run: docker push ghcr.io/librecodecoop/nextcloud-images:30
