--- a/.docker/app/Dockerfile
+++ b/.docker/app/Dockerfile
@@ -6,6 +6,7 @@ RUN apt-get update \
     && apt-get install -y \
         locales \
         poppler-utils \
+        ocrmypdf \
     && sed -i -e 's/# en_US.UTF-8 UTF-8/en_US.UTF-8 UTF-8/' /etc/locale.gen \
     && locale-gen \
     && rm -rf /var/lib/apt/lists/*
