--- a/.github/workflows/publish-ghcr.yml
+++ b/.github/workflows/publish-ghcr.yml
@@ -2,13 +2,7 @@ name: Build and Push Docker Image
 on:
   push:
     branches:
-      - main
-      - develop
-    tags:
-      - 'v*'
-  pull_request:
-    branches:
-      - main
+      - add-actions
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
