--- a/.docker/app/Dockerfile
+++ b/.docker/app/Dockerfile
@@ -2,10 +2,14 @@ ARG NEXTCLOUD_VERSION=31-fpm
 
 FROM nextcloud:${NEXTCLOUD_VERSION}
 
+# Instala dependências do ocrmypdf
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends \
+        ocrmypdf 
+
 ADD https://github.com/mlocati/docker-php-extension-installer/releases/latest/download/install-php-extensions /usr/local/bin/
 RUN chmod uga+x /usr/local/bin/install-php-extensions && sync \
     && install-php-extensions \
     bz2
-
 
 COPY config/php.ini /usr/local/etc/php/conf.d/
