--- a/.github/workflows/publish-ghcr.yml
+++ b/.github/workflows/publish-ghcr.yml
@@ -18,8 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
-      matrix:
-        image_type: [apache,fpm]
+
     permissions:
       packages: write
       contents: read
@@ -29,20 +28,7 @@ jobs:
       - name: Docker meta
         uses: docker/metadata-action@v5
         id: meta
-        with:
-          # list of Docker images to use as base name for tags
-          images: |
-            ghcr.io/librecodecoop/nextcloud-docker
-          # generate Docker tags based on the following events/attributes
-          tags: |
-            type=semver,pattern={{version}},value=${{ inputs.mautic_version }}
-            type=semver,pattern={{major}}.{{minor}},value=${{ inputs.mautic_version }},enable=${{ inputs.overwrite_latest_minor }}
-            type=semver,pattern={{major}},value=${{ inputs.mautic_version }},enable=${{ inputs.overwrite_latest_major }}
-            type=raw,value=latest,enable=${{ inputs.tag_as_latest && matrix.image_type == 'apache' }},suffix=
-          flavor: |
-            latest=false
-            prefix=
-            suffix=-${{ matrix.image_type }}
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
       - name: Set up Docker Buildx
@@ -66,20 +52,16 @@ jobs:
           push: false
           context: .docker
           platforms: linux/amd64,linux/arm64
-          file: .docker/Dockerfile.${{ matrix.image_type }}
+          file: .docker/app/Dockerfile
           tags: ${{ steps.meta.outputs.tags }}
-          build-args: |
-            MAUTIC_VERSION=${{ inputs.mautic_version }}
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache-new
+
       - name: Push container image
         uses: docker/build-push-action@v6
-        if: github.ref == 'refs/heads/main' || inputs.publish
         with:
           push: true
           context: .docker
           platforms: linux/amd64,linux/arm64
-          file: .docker/Dockerfile.${{ matrix.image_type }}
+          file: .docker/app/Dockerfile
           tags: ${{ steps.meta.outputs.tags }}
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new
