--- a/.docker/app/Dockerfile
+++ b/.docker/app/Dockerfile
@@ -12,4 +12,4 @@ RUN chmod uga+x /usr/local/bin/install-php-extensions && sync \
     && install-php-extensions \
     bz2
 
-COPY config/php.ini /usr/local/etc/php/conf.d/
+COPY /config/php.ini /usr/local/etc/php/
